--- a/_posts/2017-01-06-wind.md
+++ b/_posts/2017-01-06-wind.md
@@ -10,12 +10,12 @@ ref: Wind
 archive: false
 comments: true
 featured: false
-imagefeature: december/IMG_20170108_185404.JPG
+imagefeature: december/IMG_20170108_185404.jpg
 ---
 
 Wir haben bestimmt schon viel vom Wind gesprochen, aber so windig wie die letzten Tage war es wohl dann doch noch nicht. 80km/h und mehr scheinen hier keine Seltenheit.
 
-![It's christmas become a child again]({{ site.baseurl}}/images/december/DSCF3204_small.JPG)  
+![It's christmas become a child again]({{ site.baseurl}}/images/december/DSCF3104_small.JPG)  
 *It's christmas become a child again*
 
 Nachdem wir das netteste Hostel unserer Reise verlassen hatten, ging es schon stürmisch los. Jedoch wurden wir nach knappen 70km von nem netten Päarchen in ihren Transporter geladen. Wir samt Rad und Gepäck befanden uns dann für die nächsten 150km im dunklen Stauraum. Tragisch fanden wir es nicht, denn die Landschaft bestand immer noch nur aus trockener Pampa. Außerdem verschaffte es uns die Möglichkeit Weihnachten nicht in Puerto Natales oder mitten im  nirgendwo zu verbringen, sondern durch den Nationalpark Torres del Paine zu radeln. Über mehr oder weniger steile Hügel mit grandioser Aussicht und hübschen Campingmöglichkeiten radelten wir so über die Feiertage.
@@ -27,15 +27,12 @@ Nachdem wir das netteste Hostel unserer Reise verlassen hatten, ging es schon st
 ![Die ersten Hügel]({{ site.baseurl}}/images/december/IMG_20161225_212303_small.JPG)  
 *Die ersten Hügel*
 
-![Fahrradfahren in Torres del Peine]({{ site.baseurl}}/images/december/IMG_3807_small.JPG)  
+![Fahrradfahren in Torres del Peine]({{ site.baseurl}}/images/december/IMG_3857_small.JPG)  
 *Fahrradfahren in Torres del Peine*
-
-
 
 Auf dem Weg raus, hatten wir Rückenwind und wir wurden mit 35km/h über die Schotterpiste gepustet, ohne treten wohlgemerkt. Diese Freude verwandelte sich in Schwierigkeiten als die Straße eine leichte Kurve machte und Martha Probleme bekam ihr Rad aufrechtzuhalten. Allerdings half es in die Entwässerungsrinne auszuweichen und kurze Zeit später ging es weiter. In der nächsten langen Kurve hielt dann ein Trucker, meinte wir wären verrückt und lud uns in seinen Truck. 
 
 Nach einer Nacht campend auf einer Tankstelle und dem checken des Windberichtes entschieden wir uns einen Pausentag einzulegen, denn bei einem vorhergesagten Wind von 80km/h von vorne macht radeln wenig Sinn, zumindest, wenn es bis zur nächsten Stadt 160km trockenes Nichts ist. Wir sind jedoch clever und sind einfach nachts um 3h aufgestanden und konnten so dem Wind bis 9h entgehen. Den Tag verbrachten wir dann schwitzend im Zelt um abends noch ein paar Kilometer zu machen.
-
 
 ![Unsere Mittagspause]({{ site.baseurl}}/images/december/P1030422_small.JPG)  
 *Unsere Mittagspause*
@@ -49,7 +46,6 @@ So kamen wir dann morgens um 10h in El Calafate an, hatten 80km geradelt und fre
 
 Einer der wenigen Gletscher, die anscheinend nicht an Volumen verlieren. Hin wurden wir von einem netten Taxifahrer mitgenommen, der meinte, dass seine Tour schon von Leuten bezahlt sei, die er dort abholen soll.
 
-
 Der Gletscher ist ziemlich beeindruckend. 80km lang, 70m hoch und in regelmäßigen Abständen sieht man große Stücke abfallen, die dann mit einem Paukenschlag ins Wasser fallen. Anfang des Jahres hatte sich der Gletscher soweit vorgearbeitet, dass er einen Arm des Sees völlig abgeschnitten hatte. Dort stieg das Wasser, dann 11m über Seelevel an, bis im März sich das Wasser einen Durchgang gesucht hatte. Es muss mit einem riesigen Tosen dann aus einer Tunnelöffnung geprescht sein. Am Tag nachdem wir da waren, ist der Tunnel dann zusammengebrochen. Dieses ganze Schauspiel passiert wohl alle paar Jahre.
 
 ![Wenn einem die Decke auf dem Kopf fällt]({{ site.baseurl}}/images/december/P1030452_small.JPG)  
@@ -58,7 +54,6 @@ Der Gletscher ist ziemlich beeindruckend. 80km lang, 70m hoch und in regelmäßi
 Sylvester verbrachten wir mit einem englischen Päarchen, die wir vor ein paar Wochen im nettesten Hostel kennengelernt hatten. Sie hingen auch dort fest und so tranken wir manchmal ein Bier zusammen. Wir haben ein argentinisches Grillfest (Assado) gemacht, nur das statt nur Fleisch, nur Gemüse auf dem Grill lag. Vollgefuttert sind wir dann in die Stadt um Feuerwerk zu gucken.
 
 Am nächsten Tag ging es dann für uns weiter. Wir sind zwar erst um 14h losgekommen, aber knappe 100km waren kein Ding und so landeten wir abends im pinken Haus. Ein leer stehendes Haus was wohl von fast allen Radlern, die dort lang kommen als Übernachtungsmöglichkeit dient. Wir waren auch nicht allein, insgesamt waren wir 9 Leute. Es gibt seit Jahren Tags von Radlern aus der ganzen Welt an der Wand.
-
 
 ![The Pink House]({{ site.baseurl}}/images/december/DSCF3308_small.JPG)  
 *The Pink House*
