--- a/_posts/2017-01-26-d67en.md
+++ b/_posts/2017-01-26-d67en.md
@@ -11,6 +11,6 @@ comments: true
 featured: false 
 --- 
 
- Shortly before the national park the pavement ends and the rain starts. Nevertheless amazingly beauftiful, including some short works along the way. Later again road works with some sandy parts.                                                                                                                                                                                           
+ Shortly before the national park the pavement ends and the rain starts. Nevertheless amazingly beauftiful, including some short walaks along the way. Later again road works with some sandy parts.                                                                                                                                                                                           
 
 <iframe width='480' height='360' src='http://track-kit.net/maps_s3/?v=embed&track=235124.gpx' frameborder='0' allowfullscreen></iframe>
